getting started added

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,10 +9,11 @@ wikipedia
 langchain-text-splitters
 lxml
 python-dotenv
-langchain_openai
+
 
 sentence_transformers
 langchain_huggingface
 faiss-cpu
 chromadb
 langchain_chroma
+langchain-openai
